trap-collection-dev/backend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trap-collection-backend
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - eee101.tokyotech.org
              weight: 1

      containers:
        - name: trap-collection-backend
          image: ghcr.io/traptitech/trap-collection-server:main@sha256:1711bfb5f117da3fecf381ed1950ad27a5abb5e4b394a08054f6103ea90e6433
