trap-collection-dev/frontend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trap-collection-frontend
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - eee101.tokyotech.org
              weight: 1

      containers:
        - name: trap-collection-frontend
          image: ghcr.io/traptitech/trap-collection-admin:main@sha256:ed1d0ae4acba609eac45564d58a9713a77df1dddacc2154e48d848347e689c7e
