trap-collection-dev/ingress-route-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: trap-collection
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`collection-dev.trapti.tech`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: trap-collection-backend
          port: 3001
    - match: Host(`collection-dev.trapti.tech`)
      kind: Rule
      services:
        - name: trap-collection-frontend
          port: 80
  tls:
    secretName: collection-dev-tls
